basic expand-collapse functionality in

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ES6_test_framework_boilerplate",
-  "version": "0.2.0",
-  "description": "Boilerplate for ES6 modules with Karma & Jasmine",
+  "name": "r-table-hierarchy",
+  "version": "0.1.0",
+  "description": "Hiearchy plughin for aggregated tables that help presenting rowheaders in hierarchical form",
   "main": "src/main.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ConfirmitASA/ES6_test_framework_boilerplate.git"
+    "url": "https://github.com/ConfirmitASA/r-table-hierarchy.git"
   },
   "scripts": {
     "build": "npm run clean && npm run build:prd",
@@ -14,12 +14,11 @@
     "clean": "rimraf dist build",
     "lint": "eslint src",
     "docs": "node_modules/.bin/jsdoc --configure jsdoc.conf --verbose",
-    "docs-commit": "git subtree push --prefix docs/ES6_test_framework_boilerplate origin gh-pages",
+    "docs-commit": "git subtree push --prefix docs/r-table-hierarchy/0.1.0 origin gh-pages",
     "test": "karma start --single-run --no-auto-watch karma.config.js",
     "report-coverage": "codecov -f coverage/lcov.info"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "ConfirmitASA",
   "license": "",
   "devDependencies": {
@@ -62,5 +61,9 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "codecov": ">1.0.0"
+  },
+  "dependencies": {
+    "r-aggregated-table": "github:confirmitasa/r-aggregated-table",
+    "r-reporal-base": "github:confirmitasa/r-reportal-base"
   }
 }
