--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
   "dependencies": {
     "r-aggregated-table": "github:confirmitasa/r-aggregated-table",
     "r-highlight": "github:confirmitasa/r-highlight",
-    "r-reporal-base": "github:confirmitasa/r-reportal-base",
+    "r-reportal-base": "github:confirmitasa/r-reportal-base",
     "r-sort-table": "github:confirmitasa/r-sort-table"
   }
 }
